Split core and core-api modules